--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,8 +49,12 @@ oid-registry = { version = "0.6", features = ["crypto", "x509"] }
 rusticata-macros = "4.0"
 der-parser = { version = "8.1.0", features = ["bigint"] }
 thiserror = "1.0.2"
-ring = { git = "https://github.com/briansmith/ring.git", features = ["wasm32_unknown_unknown_js"], optional = true }
-fluvio-wasm-timer = "0.2.5"
+
+[dependencies.ring]
+git = "https://github.com/briansmith/ring.git"
+rev = "0f3bf003"
+features = ["wasm32_unknown_unknown_js"]
+optional = true
 
 [target.'cfg(target_family = "wasm")'.dependencies.chrono]
 version = "=0.4.19"
